# rustdirstat

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  justfile
.github/workflows/: ci.yml  release.yml
crates/: CLAUDE.md
crates/rds-core/: CLAUDE.md  Cargo.toml  README.md
crates/rds-core/benches/: tree_bench.rs
crates/rds-core/src/: CLAUDE.md  config.rs  lib.rs  scan.rs  stats.rs  tree.rs
crates/rds-gui/: CLAUDE.md  Cargo.toml
crates/rds-gui/benches/: treemap_bench.rs
crates/rds-gui/src/: CLAUDE.md  actions.rs  command_editor.rs  duplicates.rs  error_log.rs  export.rs  ext_stats.rs  lib.rs  notifications.rs  settings.rs  tree_view.rs  treemap.rs
crates/rds-scanner/: CLAUDE.md  Cargo.toml  README.md
crates/rds-scanner/src/: duplicate.rs  lib.rs  scanner.rs
crates/rds-scanner/tests/: duplicate_integration.rs  exclude_integration.rs  scan_integration.rs
docs/: CLAUDE.md  benchmarks.md  milestones.md
docs/ai-context/: docs-overview.md  project-structure.md
docs/superpowers/plans/: 2026-03-23-ms21-packaging-distribution.md
docs/superpowers/specs/: 2026-03-19-rustdirstat-design.md
plans/: CLAUDE.md  ms1-workspace-scaffold-ci.md  ms10-panel-synchronization.md  ms2-core-data-types.md  ms3-single-threaded-scanner.md  ms8-treemap-layout-flat.md
scripts/: benchmark-comparison.sh  generate-icon.py
src/: main.rs
