# Workspace root. All crate versions and feature flags are pinned here;
# individual crates opt-in with `{ workspace = true }`. (ref: DL-001, DL-002, DL-004)
#
[workspace]
members = ["crates/rds-core", "crates/rds-scanner", "crates/rds-gui"]
resolver = "3"

[workspace.dependencies]
eframe = "0.33.3"
egui = "0.33.3"
rfd = "0.15"
jwalk = "0.8.1"
rayon = "1.11.0"
crossbeam-channel = "0.5.15"
sha2 = "0.10.9"
clap = { version = "4.6.0", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
csv = "1.4.0"
streemap = "0.1.0"
trash = "5.2.5"
open = "5.3.3"
directories = "6.0.0"
toml = "1.0.7"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
rds-core = { path = "crates/rds-core" }
rds-scanner = { path = "crates/rds-scanner" }
rds-gui = { path = "crates/rds-gui" }
egui-notify = "0.21.0"
glob = "0.3"
walkdir = "2.5.0"
tempfile = "3.27.0"
criterion = { version = "0.5", features = ["html_reports"] }
image = { version = "0.25", default-features = false, features = ["png"] }

# Binary crate. Owns CLI parsing and eframe bootstrap; delegates scanning
# and rendering to rds-scanner and rds-gui respectively.
[package]
name = "rustdirstat"
version = "1.0.0-beta"
edition = "2024"
license = "MIT"
description = "Cross-platform disk usage analyzer with interactive treemap visualization"
repository = "https://github.com/Psysician/rustdirstat"
homepage = "https://github.com/Psysician/rustdirstat"
keywords = ["disk-usage", "treemap", "filesystem", "analyzer", "windirstat"]
categories = ["command-line-utilities", "filesystem"]
readme = "README.md"

[dependencies]
clap = { workspace = true }
crossbeam-channel = { workspace = true }
eframe = { workspace = true }
egui = { workspace = true }
rds-core = { workspace = true }
rds-gui = { workspace = true }
rds-scanner = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
directories = { workspace = true }
toml = { workspace = true }
serde = { workspace = true }
image = { workspace = true }
