# rds-gui: egui/eframe immediate-mode GUI.
# Receives scan events from rds-scanner via crossbeam-channel and renders
# the treemap using the streemap crate. streemap is declared upfront alongside
# all other dependencies to prevent version drift. (ref: DL-001)
[package]
name = "rds-gui"
version = "0.1.0"
edition = "2024"

[dependencies]
rds-core = { workspace = true }
rds-scanner = { workspace = true }
eframe = { workspace = true }
egui = { workspace = true }
streemap = { workspace = true }
crossbeam-channel = { workspace = true }
tracing = { workspace = true }
rfd = { workspace = true }
trash = { workspace = true }
