# rds-scanner: parallel filesystem traversal and hashing.
# Uses jwalk for parallel directory walking and crossbeam-channel to stream
# scan events to the GUI without blocking either thread.
[package]
name = "rds-scanner"
version = "0.1.0"
edition = "2024"

[dependencies]
rds-core = { workspace = true }
jwalk = { workspace = true }
rayon = { workspace = true }
sha2 = { workspace = true }
crossbeam-channel = { workspace = true }
tracing = { workspace = true }
