# rds-scanner: filesystem traversal and event streaming.
#
# Uses walkdir for single-threaded traversal; produces ScanEvent stream over
# bounded crossbeam-channel (DL-002).
[package]
name = "rds-scanner"
version = "0.1.0"
edition = "2024"

[dependencies]
rds-core = { workspace = true }
crossbeam-channel = { workspace = true }
tracing = { workspace = true }
walkdir = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
