# rds-scanner: parallel filesystem traversal and event streaming.
#
# Uses jwalk for parallel traversal; produces ScanEvent stream over
# bounded crossbeam-channel. jwalk is the sole traversal dependency;
# see DL-001 (depth-first ordering), DL-007 (dependency removal).
[package]
name = "rds-scanner"
version = "0.1.0"
edition = "2024"

[dependencies]
rds-core = { workspace = true }
crossbeam-channel = { workspace = true }
tracing = { workspace = true }
jwalk = { workspace = true }
sha2 = { workspace = true }
rayon = { workspace = true }
glob = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
